--- a/Docs/Version/0.2.0.md
+++ b/Docs/Version/0.2.0.md
@@ -198,17 +198,17 @@
 * 是否为失信黑榜信息: 否
 * 备注: 名称太长,不符合oracle建表规定,表名不能超过30个字符,故简写为: `省基建项目信息`
 
-### jyjginfo
+### jyjgxinxi
 
 **教育机构信息** 市教育局.
 
-* 标识: JYJGINFO
+* 标识: JYJGXINXI
 * 是否为行政许可信息: 否
 * 是否为行政处罚信息: 否
 * 是否为守信红榜信息: 否
 * 是否为失信黑榜信息: 否
 
-### grryxxJyj
+### grryxxjyj
 
 **个人荣誉信息** 市教育局.
 
@@ -218,7 +218,7 @@
 * 是否为守信红榜信息: 是
 * 是否为失信黑榜信息: 否
 
-### grryxxJtj
+### grryxxjtj
 
 **个人荣誉信息** 市交通运输局.
 
@@ -238,7 +238,7 @@
 * 是否为守信红榜信息: 是
 * 是否为失信黑榜信息: 否
 
-### grryxxGdj
+### grryxxgdj
 
 **个人荣誉信息** 市文广新局.
 
@@ -248,7 +248,7 @@
 * 是否为守信红榜信息: 是
 * 是否为失信黑榜信息: 否
 
-### grryxxMzj
+### grryxxmzj
 
 **个人荣誉信息** 市民政局.
 
@@ -258,7 +258,7 @@
 * 是否为守信红榜信息: 是
 * 是否为失信黑榜信息: 否
 
-### grryxxAjj
+### grryxxajj
 
 **个人荣誉信息** 市安全生产监管局.
 
