--- a/Docs/Version/0.2.0.md
+++ b/Docs/Version/0.2.0.md
@@ -207,6 +207,7 @@
 * 是否为行政处罚信息: 否
 * 是否为守信红榜信息: 否
 * 是否为失信黑榜信息: 否
+* 备注: 因个人荣誉信息其他委办局也有,所以在命名时加上对应的委办局
 
 ### grryxxjyj
 
@@ -217,6 +218,7 @@
 * 是否为行政处罚信息: 否
 * 是否为守信红榜信息: 是
 * 是否为失信黑榜信息: 否
+* 备注: 因个人荣誉信息其他委办局也有,所以在命名时加上对应的委办局
 
 ### grryxxjtj
 
@@ -227,6 +229,7 @@
 * 是否为行政处罚信息: 否
 * 是否为守信红榜信息: 是
 * 是否为失信黑榜信息: 否
+* 备注: 因个人荣誉信息其他委办局也有,所以在命名时加上对应的委办局
 
 ### grryxxLfw
 
@@ -237,6 +240,7 @@
 * 是否为行政处罚信息: 否
 * 是否为守信红榜信息: 是
 * 是否为失信黑榜信息: 否
+* 备注: 因个人荣誉信息其他委办局也有,所以在命名时加上对应的委办局
 
 ### grryxxgdj
 
@@ -247,6 +251,7 @@
 * 是否为行政处罚信息: 否
 * 是否为守信红榜信息: 是
 * 是否为失信黑榜信息: 否
+* 备注: 因个人荣誉信息其他委办局也有,所以在命名时加上对应的委办局
 
 ### grryxxmzj
 
@@ -257,6 +262,7 @@
 * 是否为行政处罚信息: 否
 * 是否为守信红榜信息: 是
 * 是否为失信黑榜信息: 否
+* 备注: 因个人荣誉信息其他委办局也有,所以在命名时加上对应的委办局
 
 ### grryxxajj
 
@@ -267,6 +273,7 @@
 * 是否为行政处罚信息: 否
 * 是否为守信红榜信息: 是
 * 是否为失信黑榜信息: 否
+* 备注: 因个人荣誉信息其他委办局也有,所以在命名时加上对应的委办局
 
 ### qyycmlxx
 
