--- a/Docs/Version/0.2.0.md
+++ b/Docs/Version/0.2.0.md
@@ -284,3 +284,16 @@
 * 是否为行政处罚信息: 否
 * 是否为守信红榜信息: 否
 * 是否为失信黑榜信息: 是
+
+## 2. 删除原来的市教育局的教育机构信息
+
+### jyjgxx
+
+**教育机构信息** 市教育局.(作废)
+
+* 标识: JYJGXX
+* 是否为行政许可信息: 是
+* 是否为行政处罚信息: 否
+* 是否为守信红榜信息: 否
+* 是否为失信黑榜信息: 否
+* 备注: 经确认萍乡要求以新的资源目录为主
