--- a/Docs/Version/0.2.0.md
+++ b/Docs/Version/0.2.0.md
@@ -207,7 +207,6 @@
 * 是否为行政处罚信息: 否
 * 是否为守信红榜信息: 否
 * 是否为失信黑榜信息: 否
-* 备注: 因个人荣誉信息其他委办局也有,所以在命名时加上对应的委办局
 
 ### grryxxjyj
 
@@ -231,7 +230,7 @@
 * 是否为失信黑榜信息: 否
 * 备注: 因个人荣誉信息其他委办局也有,所以在命名时加上对应的委办局
 
-### grryxxLfw
+### grryxxlfw
 
 **个人荣誉信息** 市旅发委.
 
