--- a/Docs/Version/0.4.0.md
+++ b/Docs/Version/0.4.0.md
@@ -12,7 +12,7 @@
 
 ---
 
-## 1.开发以下资源目录, 共1个
+## 1.开发以下资源目录, 共3个
 
 ### qiyejbxx
 
@@ -24,6 +24,26 @@
 * 是否为守信红榜信息: 否
 * 是否为失信黑榜信息: 否
 * 主体类别: 社会法人
+
+### xbxzcf
+
+**2019行政处罚公示信息** 适合现有的46个委办局.
+
+* 标识: XBXZCF
+* 是否为行政许可信息: 否
+* 是否为行政处罚信息: 是
+* 是否为守信红榜信息: 否
+* 是否为失信黑榜信息: 否
+
+### xbxzxk
+
+**2019行政许可公示信息** 适合现有的46个委办局.
+
+* 标识: XBXZXK
+* 是否为行政许可信息: 是
+* 是否为行政处罚信息: 否
+* 是否为守信红榜信息: 否
+* 是否为失信黑榜信息: 否
 
 ## 2. 删除原来的市市场和质量监督管理局的企业基本信息
 
