--- a/Docs/Version/0.5.0.md
+++ b/Docs/Version/0.5.0.md
@@ -27,7 +27,7 @@
 
 ### sbyhjbxx
 
-**水表用户基本信息** 所属委办局？
+**水表用户基本信息** 所属委办局？(应为市水务公司,待确认)
 
 * 标识: SBYHJBXX
 * 是否为行政许可信息: 否
@@ -41,17 +41,6 @@
 **医师执业注册和变更注册** 市卫计委
 
 * 标识: YSZYZCHBGZC
-* 是否为行政许可信息: 否
-* 是否为行政处罚信息: 否
-* 是否为守信红榜信息: 否
-* 是否为失信黑榜信息: 否
-* 主体类别: 自然人
-
-### yszyzgzxx
-
-**医师执业资格证信息** 市卫计委
-
-* 标识: YSZYZGZXX
 * 是否为行政许可信息: 否
 * 是否为行政处罚信息: 否
 * 是否为守信红榜信息: 否
