--- a/Docs/Version/0.5.0.md
+++ b/Docs/Version/0.5.0.md
@@ -12,7 +12,7 @@
 
 ---
 
-## 1.开发以下资源目录, 共11个
+## 1.开发以下资源目录, 共11个 #10981
 
 ### gzryxx
 
@@ -134,4 +134,61 @@
 * 是否为行政处罚信息: 否
 * 是否为守信红榜信息: 否
 * 是否为失信黑榜信息: 是
+* 主体类别: 社会法人
+
+## 2.将【市市场和质量监督管理局】已开发完成的资源目录【机构荣誉信息】授权给以下委办局, 共5个 #11063
+
+### jgryxxswgxj
+
+**机构荣誉信息** 市文广新局.
+
+* 标识: JGRYXXSWGXJ
+* 是否为行政许可信息: 否
+* 是否为行政处罚信息: 否
+* 是否为守信红榜信息: 是
+* 是否为失信黑榜信息: 否
+* 主体类别: 社会法人
+
+### jgryxxsajgj
+
+**机构荣誉信息** 市安监局.
+
+* 标识: JGRYXXSAJGJ
+* 是否为行政许可信息: 否
+* 是否为行政处罚信息: 否
+* 是否为守信红榜信息: 是
+* 是否为失信黑榜信息: 否
+* 主体类别: 社会法人
+
+### jgryxxsjyj
+
+**机构荣誉信息** 市教育局.
+
+* 标识: JGRYXXSJYJ
+* 是否为行政许可信息: 否
+* 是否为行政处罚信息: 否
+* 是否为守信红榜信息: 是
+* 是否为失信黑榜信息: 否
+* 主体类别: 社会法人
+
+### jgryxxsfgj
+
+**机构荣誉信息** 市房管局.
+
+* 标识: JGRYXXSFGJ
+* 是否为行政许可信息: 否
+* 是否为行政处罚信息: 否
+* 是否为守信红榜信息: 是
+* 是否为失信黑榜信息: 否
+* 主体类别: 社会法人
+
+### jgryxxssfj
+
+**机构荣誉信息** 市司法局.
+
+* 标识: JGRYXXSSFJ
+* 是否为行政许可信息: 否
+* 是否为行政处罚信息: 否
+* 是否为守信红榜信息: 是
+* 是否为失信黑榜信息: 否
 * 主体类别: 社会法人
