--- a/Docs/Version/0.5.0.md
+++ b/Docs/Version/0.5.0.md
@@ -192,3 +192,40 @@
 * 是否为守信红榜信息: 是
 * 是否为失信黑榜信息: 否
 * 主体类别: 社会法人
+
+## 3.开发以下资源目录, 共2个 #11139
+
+### mbfqyml
+
+**民办非企业名录** 市民政局.
+
+* 标识: MBFQYML
+* 是否为行政许可信息: 否
+* 是否为行政处罚信息: 否
+* 是否为守信红榜信息: 否
+* 是否为失信黑榜信息: 否
+* 主体类别: 社会法人
+
+### shttdjxx
+
+**社会团体登记信息** 市民政局.
+
+* 标识: SHTTDJXX
+* 是否为行政许可信息: 否
+* 是否为行政处罚信息: 否
+* 是否为守信红榜信息: 否
+* 是否为失信黑榜信息: 否
+* 主体类别: 社会法人
+
+## 4.修改以下一个资源目录的双公示类别
+
+### sydwfrdjxx
+
+**事业单位法人登记信息** 市编办.
+
+* 标识: SYDWFRDJXX
+* 是否为行政许可信息: 是->否
+* 是否为行政处罚信息: 否
+* 是否为守信红榜信息: 否
+* 是否为失信黑榜信息: 否
+* 主体类别: 社会法人
