--- a/Docs/Version/0.6.0.md
+++ b/Docs/Version/0.6.0.md
@@ -48,3 +48,16 @@
 * 是否为守信红榜信息: 否
 * 是否为失信黑榜信息: 否
 * 主体类别: 社会法人
+
+## 2.开发以下资源目录, 共1个 #12386
+
+### jgryxxslfw
+
+**机构荣誉信息** 市旅发委
+
+* 标识: JGRYXXSLFW
+* 是否为行政许可信息: 否
+* 是否为行政处罚信息: 否
+* 是否为守信红榜信息: 是
+* 是否为失信黑榜信息: 否
+* 主体类别: 社会法人
